--- a/index.html
+++ b/index.html
@@ -17,40 +17,26 @@
       }
       body {
         margin: 0;
-        background-color: #020617;
+        /* 使用径向渐变替代纯黑，增加空间感 */
+        background: radial-gradient(circle at 50% 50%, #0f172a 0%, #020617 100%);
         color: #f8fafc;
         font-family: 'Inter', 'Noto Serif SC', sans-serif;
         overflow-x: hidden;
       }
-      /* Premium Noise Texture */
-      body::before {
+      /* 增加颗粒感纹理 */
+      body::after {
         content: "";
-        fixed: top 0 left 0;
         position: fixed;
-        width: 100vw;
-        height: 100vh;
-        opacity: 0.03;
-        z-index: 50;
+        top: 0; left: 0; width: 100%; height: 100%;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3%3Cfilter id='n'%3%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3'/%3%3C/filter%3%3Crect width='100%25' height='100%25' filter='url(%23n)'/%3%3C/svg%3%3E");
+        opacity: 0.04;
         pointer-events: none;
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3%3Cfilter id='noiseFilter'%3%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3%3C/filter%3%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3%3C/svg%3%3E");
-      }
-      ::-webkit-scrollbar {
-        width: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #020617;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #1e293b;
-        border-radius: 10px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #334155;
+        z-index: 60;
       }
       .glass {
         background: rgba(15, 23, 42, 0.4);
-        backdrop-filter: blur(16px) saturate(180%);
-        -webkit-backdrop-filter: blur(16px) saturate(180%);
+        backdrop-filter: blur(20px) saturate(180%);
+        -webkit-backdrop-filter: blur(20px) saturate(180%);
         border: 1px solid rgba(255, 255, 255, 0.08);
       }
       .text-gradient {
@@ -58,47 +44,48 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-size: 200% auto;
-        animation: textShine 4s linear infinite;
+        animation: textShine 5s ease infinite;
       }
       @keyframes textShine {
-        to { background-position: 200% center; }
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
       }
       .font-sinology {
         font-family: 'Noto Serif SC', serif;
       }
-      .blob {
-        position: absolute;
-        width: 500px;
-        height: 500px;
-        background: linear-gradient(135deg, rgba(34, 211, 238, 0.15) 0%, rgba(129, 140, 248, 0.15) 100%);
-        filter: blur(80px);
-        border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-        animation: blobFloat 20s infinite alternate;
-        z-index: -5;
+      .reveal {
+        opacity: 0;
+        transform: translateY(40px);
+        transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
       }
-      @keyframes blobFloat {
-        0% { transform: translate(0, 0) scale(1); border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%; }
-        100% { transform: translate(100px, 50px) scale(1.2); border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%; }
+      .reveal-visible {
+        opacity: 1;
+        transform: translateY(0);
       }
       .glow-card:hover {
-        box-shadow: 0 0 30px rgba(34, 211, 238, 0.15);
-        border-color: rgba(34, 211, 238, 0.3);
-        transform: translateY(-4px);
+        border-color: rgba(34, 211, 238, 0.4);
+        box-shadow: 0 0 40px rgba(34, 211, 238, 0.1);
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "lucide-react": "https://esm.sh/lucide-react@^0.474.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react-intersection-observer": "https://esm.sh/react-intersection-observer@^9.13.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
+    <!-- 自动导入 index.tsx -->
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
