--- a/index.html
+++ b/index.html
@@ -17,66 +17,62 @@
       }
       body {
         margin: 0;
-        /* 使用径向渐变替代纯黑，增加空间感 */
+        padding: 0;
+        background-color: #020617;
+        /* 兜底渐变，确保 JS 未加载前不是纯黑 */
         background: radial-gradient(circle at 50% 50%, #0f172a 0%, #020617 100%);
         color: #f8fafc;
         font-family: 'Inter', 'Noto Serif SC', sans-serif;
         overflow-x: hidden;
       }
-      /* 增加颗粒感纹理 */
-      body::after {
-        content: "";
+      /* 背景装饰网格 */
+      .bg-grid {
         position: fixed;
-        top: 0; left: 0; width: 100%; height: 100%;
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3%3Cfilter id='n'%3%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3'/%3%3C/filter%3%3Crect width='100%25' height='100%25' filter='url(%23n)'/%3%3C/svg%3%3E");
-        opacity: 0.04;
+        inset: 0;
+        background-image: linear-gradient(to right, rgba(255,255,255,0.02) 1px, transparent 1px),
+                          linear-gradient(to bottom, rgba(255,255,255,0.02) 1px, transparent 1px);
+        background-size: 40px 40px;
         pointer-events: none;
-        z-index: 60;
+        z-index: -5;
       }
       .glass {
-        background: rgba(15, 23, 42, 0.4);
+        background: rgba(15, 23, 42, 0.6);
         backdrop-filter: blur(20px) saturate(180%);
         -webkit-backdrop-filter: blur(20px) saturate(180%);
-        border: 1px solid rgba(255, 255, 255, 0.08);
+        border: 1px solid rgba(255, 255, 255, 0.1);
       }
       .text-gradient {
         background: linear-gradient(to right, var(--accent-cyan), var(--accent-indigo), var(--accent-purple));
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-size: 200% auto;
-        animation: textShine 5s ease infinite;
+        animation: textShine 5s linear infinite;
       }
       @keyframes textShine {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
+        to { background-position: 200% center; }
       }
       .font-sinology {
         font-family: 'Noto Serif SC', serif;
       }
       .reveal {
         opacity: 0;
-        transform: translateY(40px);
-        transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
+        transform: translateY(30px);
+        transition: all 0.8s cubic-bezier(0.2, 1, 0.3, 1);
       }
       .reveal-visible {
         opacity: 1;
         transform: translateY(0);
       }
-      .glow-card:hover {
-        border-color: rgba(34, 211, 238, 0.4);
-        box-shadow: 0 0 40px rgba(34, 211, 238, 0.1);
-      }
     </style>
     <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.474.0",
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react-intersection-observer": "https://esm.sh/react-intersection-observer@^9.13.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.474.0?external=react",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "react-intersection-observer": "https://esm.sh/react-intersection-observer@9.13.0?external=react",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
@@ -84,8 +80,13 @@
 </script>
   </head>
   <body>
-    <div id="root"></div>
-    <!-- 自动导入 index.tsx -->
+    <div class="bg-grid"></div>
+    <div id="root">
+      <!-- 初次加载时的骨架/占位 -->
+      <div style="height: 100vh; display: flex; align-items: center; justify-content: center; font-weight: bold; letter-spacing: 0.2em; color: rgba(255,255,255,0.2);">
+        LOADING EXPERIENCE...
+      </div>
+    </div>
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
