--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: #020617;
-        background: radial-gradient(circle at 50% 50%, #0f172a 0%, #020617 100%);
+        /* 稍微调亮背景色，确保能看到页面已加载 */
+        background-color: #0f172a;
+        background: radial-gradient(circle at 50% 50%, #1e293b 0%, #0f172a 100%);
         color: #f8fafc;
         font-family: 'Inter', 'Noto Serif SC', sans-serif;
         overflow-x: hidden;
@@ -27,17 +28,30 @@
       .bg-grid {
         position: fixed;
         inset: 0;
-        background-image: linear-gradient(to right, rgba(255,255,255,0.02) 1px, transparent 1px),
-                          linear-gradient(to bottom, rgba(255,255,255,0.02) 1px, transparent 1px);
-        background-size: 40px 40px;
+        background-image: linear-gradient(to right, rgba(255,255,255,0.03) 1px, transparent 1px),
+                          linear-gradient(to bottom, rgba(255,255,255,0.03) 1px, transparent 1px);
+        background-size: 50px 50px;
         pointer-events: none;
         z-index: -5;
       }
-      .glass {
-        background: rgba(15, 23, 42, 0.6);
-        backdrop-filter: blur(20px) saturate(180%);
-        -webkit-backdrop-filter: blur(20px) saturate(180%);
-        border: 1px solid rgba(255, 255, 255, 0.1);
+      .loading-screen {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1.5rem;
+      }
+      .loader {
+        width: 30px;
+        height: 30px;
+        border: 2px solid rgba(34, 211, 238, 0.2);
+        border-top-color: #22d3ee;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        to { transform: rotate(360deg); }
       }
       .text-gradient {
         background: linear-gradient(to right, var(--accent-cyan), var(--accent-indigo), var(--accent-purple));
@@ -49,28 +63,17 @@
       @keyframes textShine {
         to { background-position: 200% center; }
       }
-      .font-sinology {
-        font-family: 'Noto Serif SC', serif;
-      }
-      .reveal {
-        opacity: 0;
-        transform: translateY(30px);
-        transition: all 0.8s cubic-bezier(0.2, 1, 0.3, 1);
-      }
-      .reveal-visible {
-        opacity: 1;
-        transform: translateY(0);
-      }
     </style>
+    <!-- 极简、零冲突的 Import Map -->
     <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.474.0?bundle&deps=react@19.0.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.474.0?external=react",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "react-intersection-observer": "https://esm.sh/react-intersection-observer@9.13.0?bundle&deps=react@19.0.0",
+    "react-intersection-observer": "https://esm.sh/react-intersection-observer@9.13.0?external=react",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
@@ -80,19 +83,22 @@
   <body>
     <div class="bg-grid"></div>
     <div id="root">
-      <div style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; gap: 20px;">
-        <div style="font-size: 10px; letter-spacing: 0.5em; color: rgba(255,255,255,0.4); font-weight: bold; text-transform: uppercase;">
+      <div class="loading-screen">
+        <div class="loader"></div>
+        <div style="font-size: 10px; letter-spacing: 0.4em; color: #22d3ee; font-weight: bold; text-transform: uppercase;">
           Niu Yuwen Digital Space
         </div>
-        <div style="width: 40px; height: 1px; background: rgba(34, 211, 238, 0.3);"></div>
-        <div style="font-size: 12px; color: rgba(255,255,255,0.2);">INITIALIZING EXPERIENCE...</div>
       </div>
     </div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- 移除 ./ 前缀以增加兼容性 -->
+    <script type="module" src="index.tsx"></script>
     <script>
-      // 捕获脚本错误并输出到控制台，方便调试
-      window.onerror = function(message, source, lineno, colno, error) {
-        console.error('Global Error caught:', message, 'at', source, lineno, ':', colno);
+      console.log("HTML Parsing Complete. Waiting for index.tsx...");
+      window.onerror = function(msg, url, line) {
+        console.error("Critical Error: " + msg + " at " + url + ":" + line);
+        // 如果出错，就在页面上显示错误，方便排查
+        const root = document.getElementById('root');
+        if (root) root.innerHTML = '<div style="padding: 20px; color: #ff4444; font-family: monospace;">[Error] ' + msg + '</div>';
       };
     </script>
   </body>
