--- a/index.html
+++ b/index.html
@@ -18,62 +18,69 @@
       body {
         margin: 0;
         padding: 0;
-        /* 稍微调亮背景色，确保能看到页面已加载 */
-        background-color: #0f172a;
-        background: radial-gradient(circle at 50% 50%, #1e293b 0%, #0f172a 100%);
+        background-color: #020617;
+        background: radial-gradient(circle at 50% 50%, #0f172a 0%, #020617 100%);
         color: #f8fafc;
         font-family: 'Inter', 'Noto Serif SC', sans-serif;
-        overflow-x: hidden;
+        overflow: hidden; /* 防止初始化时出现滚动条 */
       }
       .bg-grid {
         position: fixed;
         inset: 0;
-        background-image: linear-gradient(to right, rgba(255,255,255,0.03) 1px, transparent 1px),
-                          linear-gradient(to bottom, rgba(255,255,255,0.03) 1px, transparent 1px);
+        background-image: linear-gradient(to right, rgba(255,255,255,0.02) 1px, transparent 1px),
+                          linear-gradient(to bottom, rgba(255,255,255,0.02) 1px, transparent 1px);
         background-size: 50px 50px;
         pointer-events: none;
         z-index: -5;
       }
-      .loading-screen {
+      .loading-container {
         height: 100vh;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 1.5rem;
+        gap: 20px;
+        background: #020617;
       }
-      .loader {
-        width: 30px;
-        height: 30px;
-        border: 2px solid rgba(34, 211, 238, 0.2);
-        border-top-color: #22d3ee;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
+      .loader-bar {
+        width: 200px;
+        height: 2px;
+        background: rgba(34, 211, 238, 0.1);
+        position: relative;
+        overflow: hidden;
       }
-      @keyframes spin {
-        to { transform: rotate(360deg); }
+      .loader-bar::after {
+        content: '';
+        position: absolute;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: #22d3ee;
+        animation: loading 1.5s infinite;
       }
-      .text-gradient {
-        background: linear-gradient(to right, var(--accent-cyan), var(--accent-indigo), var(--accent-purple));
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-size: 200% auto;
-        animation: textShine 5s linear infinite;
+      @keyframes loading {
+        100% { left: 100%; }
       }
-      @keyframes textShine {
-        to { background-position: 200% center; }
+      .error-overlay {
+        position: fixed;
+        inset: 0;
+        background: #000;
+        color: #ff4444;
+        padding: 40px;
+        font-family: monospace;
+        z-index: 9999;
+        display: none;
       }
     </style>
-    <!-- 极简、零冲突的 Import Map -->
     <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.474.0?external=react",
+    "lucide-react": "https://esm.sh/lucide-react@0.474.0?bundle&deps=react@19.0.0",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "react-intersection-observer": "https://esm.sh/react-intersection-observer@9.13.0?external=react",
+    "react-intersection-observer": "https://esm.sh/react-intersection-observer@9.13.0?bundle&deps=react@19.0.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
@@ -81,24 +88,34 @@
 </script>
   </head>
   <body>
+    <div id="error-display" class="error-overlay"></div>
     <div class="bg-grid"></div>
     <div id="root">
-      <div class="loading-screen">
-        <div class="loader"></div>
-        <div style="font-size: 10px; letter-spacing: 0.4em; color: #22d3ee; font-weight: bold; text-transform: uppercase;">
-          Niu Yuwen Digital Space
-        </div>
+      <div class="loading-container">
+        <div style="font-size: 10px; letter-spacing: 0.5em; color: #22d3ee; font-weight: bold;">INITIALIZING SPACE</div>
+        <div class="loader-bar"></div>
+        <div style="font-size: 12px; color: rgba(255,255,255,0.3); font-style: italic;">Powered by Gemini 3.0</div>
       </div>
     </div>
-    <!-- 移除 ./ 前缀以增加兼容性 -->
-    <script type="module" src="index.tsx"></script>
+    
+    <!-- 使用绝对路径尝试加载，确保即使在二级目录下也能找到文件 -->
+    <script type="module">
+      import "./index.tsx";
+      console.log("Entry module loaded.");
+    </script>
+
     <script>
-      console.log("HTML Parsing Complete. Waiting for index.tsx...");
-      window.onerror = function(msg, url, line) {
-        console.error("Critical Error: " + msg + " at " + url + ":" + line);
-        // 如果出错，就在页面上显示错误，方便排查
-        const root = document.getElementById('root');
-        if (root) root.innerHTML = '<div style="padding: 20px; color: #ff4444; font-family: monospace;">[Error] ' + msg + '</div>';
+      // 全局错误诊断器：如果是黑屏，它会告诉你发生了什么
+      window.onerror = function(msg, url, line, col, error) {
+        const display = document.getElementById('error-display');
+        display.style.display = 'block';
+        display.innerHTML = `
+          <h1 style="color: white; margin-bottom: 20px;">系统初始化失败</h1>
+          <p>错误信息: ${msg}</p>
+          <p>位置: ${url}:${line}:${col}</p>
+          <hr style="border: 0; border-top: 1px solid #333; margin: 20px 0;">
+          <p style="color: #888;">建议: 请检查网络连接或尝试清除浏览器缓存。</p>
+        `;
       };
     </script>
   </body>
