--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         font-family: 'Inter', 'Noto Serif SC', sans-serif;
         overflow-x: hidden;
       }
-      /* 加载动画 */
       #root:empty + .loading-screen {
         display: flex;
       }
@@ -38,16 +37,38 @@
       }
       .loader {
         width: 40px;
-        height: 40px;
-        border: 2px solid rgba(34, 211, 238, 0.1);
-        border-top-color: #22d3ee;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
+        height: 2px;
+        background: rgba(34, 211, 238, 0.1);
+        position: relative;
+        overflow: hidden;
       }
-      @keyframes spin {
-        to { transform: rotate(360deg); }
+      .loader::after {
+        content: '';
+        position: absolute;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: #22d3ee;
+        animation: loading 1.5s infinite;
+      }
+      @keyframes loading {
+        100% { left: 100%; }
+      }
+      #error-display {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(220, 38, 38, 0.9);
+        color: white;
+        padding: 10px;
+        font-family: monospace;
+        font-size: 12px;
+        z-index: 10000;
+        display: none;
       }
     </style>
+    <!-- 极简 Import Map，消除一切版本冲突 -->
     <script type="importmap">
 {
   "imports": {
@@ -62,20 +83,30 @@
   }
 }
 </script>
+    <script>
+      // 预注入环境对象，防止部分库访问 process 时崩溃
+      window.process = { env: { API_KEY: "" } };
+    </script>
   </head>
   <body>
     <div id="root"></div>
     
     <div class="loading-screen">
+      <div style="margin-bottom: 20px; font-size: 10px; letter-spacing: 0.5em; color: #22d3ee; font-weight: bold;">INITIALIZING SPACE</div>
       <div class="loader"></div>
-      <div style="margin-top: 20px; font-size: 10px; letter-spacing: 0.5em; color: #22d3ee; font-weight: bold;">INITIALIZING SPACE</div>
     </div>
 
-    <script type="module" src="index.tsx"></script>
+    <div id="error-display"></div>
+
+    <script type="module" src="./index.tsx"></script>
 
     <script>
       window.onerror = function(msg, url, line) {
-        console.error("Critical Runtime Error: " + msg + "\nAt: " + url + ":" + line);
+        const display = document.getElementById('error-display');
+        if (display) {
+          display.style.display = 'block';
+          display.innerText = "Error: " + msg + "\nIn: " + url + ":" + line;
+        }
       };
     </script>
   </body>
