feat: Enhance Gemini AI integration and error handling
Refactors Gemini AI service to directly access `process.env.API_KEY` for security and removes redundant environment variable injection.

Updates the initial AI greeting message in the chat component for clarity.

Adjusts error display styles and messages in `index.html` for better user feedback.

Improves the `getGeminiResponse` function to handle potential API errors more gracefully and provides a fallback message when the API key is missing.

Updates the loading state management in the `AiChat` component to ensure the scroll ref is updated correctly.

Optimizes the `GroundingSource` extraction in `gemini.ts` to correctly capture web URIs and titles.

Adjusts the font size of the error display in `index.html`.

--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
         color: white;
         padding: 10px;
         font-family: monospace;
-        font-size: 12px;
+        font-size: 11px;
         z-index: 10000;
         display: none;
       }
     </style>
-    <!-- 极简 Import Map，消除一切版本冲突 -->
     <script type="importmap">
 {
   "imports": {
@@ -83,10 +82,6 @@
   }
 }
 </script>
-    <script>
-      // 预注入环境对象，防止部分库访问 process 时崩溃
-      window.process = { env: { API_KEY: "" } };
-    </script>
   </head>
   <body>
     <div id="root"></div>
@@ -98,14 +93,14 @@
 
     <div id="error-display"></div>
 
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
 
     <script>
       window.onerror = function(msg, url, line) {
         const display = document.getElementById('error-display');
         if (display) {
           display.style.display = 'block';
-          display.innerText = "Error: " + msg + "\nIn: " + url + ":" + line;
+          display.innerText = "CRITICAL ERROR: " + msg + "\nLOCATION: " + url + ":" + line;
         }
       };
     </script>
