--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 
     <div id="error-display"></div>
 
-    <script type="module" src="index.tsx"></script>
+    <!-- 使用相对路径确保在所有环境中正确加载 -->
+    <script type="module" src="./index.tsx"></script>
 
     <script>
       window.onerror = function(msg, url, line) {
